# coretrace

./: .gitignore  CMakeLists.txt  Dockerfile.release-binaries  NOTICE  README.md  TODO.md  main.cpp
.github/workflows/: build.yml  clang-format.yml  main.yml  release-binaries.yml
cmake/: CLI11.cmake  CoreTraceVersion.cmake  FetchNlohmannJson.cmake  FindOrFetchBoost.cmake  flawfinder.cmake  httpLib.cmake  ikos.cmake  install_dependencies.sh  stackUsageAnalyzer.cmake  tscancode.cmake
cmake/debug/sanitizer/: AddressSanitizer.cmake  ThreadSanitizer.cmake
cmake/logger/: coretraceLog.cmake
config/: tool-config.json
config/models/: .gitignore
docs/: configuration.md  windows-port.md
include/App/: Config.hpp  Files.hpp  Platform.hpp  Runner.hpp  SupportedTools.hpp  ToolConfig.hpp  ToolResolver.hpp  Version.hpp.in
include/ArgumentParser/: ArgumentManager.hpp  ArgumentParserFactory.hpp  BaseArgumentParser.hpp  IArgumentParser.hpp  OptionInfo.hpp
include/ArgumentParser/CLI11/: CLI11ArgumentParser.hpp
include/ArgumentParser/GetOpt/: GetOptArgumentParser.hpp
include/Config/: config.hpp
include/Process/: LinuxProcess.hpp  Process.hpp  ProcessFactory.hpp  ThreadProcess.hpp  UnixProcess.hpp  WinProcess.hpp
include/Process/Ipc/: HttpServer.hpp  IpcStrategy.hpp
include/Process/Tools/: AnalysisTools.hpp  AnalysisToolsBase.hpp  IAnalysisTools.hpp  ToolsInvoker.hpp
include/ctrace_defs/: types.hpp
include/ctrace_tools/: colors.hpp  languageType.hpp  mangle.hpp  strings.hpp
scripts/: build-windows.ps1  fix_tscancode.sh  format-check.sh  format.sh  install_boost.ps1  install_boost.sh  mystacksize_patch.h
src/App/: Config.cpp  Files.cpp  Runner.cpp  ToolConfig.cpp
src/ArgumentParser/: ArgumentManager.cpp  ArgumentParserFactory.cpp  BaseArgumentParser.cpp
src/ArgumentParser/CLI11/: CLI11ArgumentParser.cpp
src/ArgumentParser/GetOpt/: GetoptArgumentParser.cpp
src/Process/Tools/: StackAnalyzerToolImplementation.cpp  TscancodeToolImplementation.cpp
src/ctrace_tools/: languageType.cpp  mangle.cpp  strings.cpp
tests/: AvoidDefaultArgumentsOnVirtualMethods.hh  DestructorOfVirtualClass.hh  EmptyForStatement.cc  RedundantIfStatement.c  bad_function_pointer.cc  bound_index.cc  buffer_overflow.cc  config_parser_tests.cpp  dead_code.cc  double_free.c  format_problem.c  if_collapse.c  if_constant_expr.c  null_pointer.c  partitioning.cc  pointer_comparison_analysis.cc  pointer_overflow.cc  too_many_methods.cc  unaligned_dereferencing.cc
